[tool.poetry]
name = "repl_nix_zhishitupu"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyahocorasick = "^1.4.4"
pymongo = "^4.3.2"
lxml = "^4.9.1"
py2neo = "^2021.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
